merge master and fix active active docker setup